added hero section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>responsive site</title>
 </head>
 <body>
-    
+    <!-- Hero section -->
+    <section class="hero">
+        <div class="container">
+            <div class="hero__img">
+                <img src="" alt="plane">
+            </div>
+            <h1 class="white">HI. THIS IS DIRECTIVE.</h1>
+            <p class="grey">A responsive HTML5 + CSS3 site template designed by HTML5 UP
+                and released for free under the Creative Commons license.</p>
+        </div>
+    </section>
 </body>
 </html>
