changed grey class naem to trans

--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
                 
             </div>
             <h1 class="white">HI. THIS IS DIRECTIVE.</h1>
-            <p class="grey">A responsive HTML5 + CSS3 site template designed by HTML5 UP
+            <p class="trans">A responsive HTML5 + CSS3 site template designed by HTML5 UP
                 and released for free under the Creative Commons license.</p>
         </div>
     </section>
+    <!-- Slogan -->
+    <h2
 </body>
 </html>
