--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         </div>
     </section>
     <!-- Slogan -->
-    <h2
+    <div class="container">
+        <h2 class="grey">
+            WE CONDUCT EXPERIMENTS THAT MAY OR MAY NOT SERIOUSLY BREAK THE UNIVERSE
+        </h2>
+    </div>
+    
 </body>
 </html>
