gave container div slogan class

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
     </section>
     <!-- Slogan -->
-    <div class="container">
+    <div class="container slogan">
         <h2 class="grey">
             WE CONDUCT EXPERIMENTS THAT MAY OR MAY NOT SERIOUSLY BREAK THE UNIVERSE
         </h2>
