--- a/index.html
+++ b/index.html
@@ -25,6 +25,41 @@
             WE CONDUCT EXPERIMENTS THAT MAY OR MAY NOT SERIOUSLY BREAK THE UNIVERSE
         </h2>
     </div>
-    
+    <!-- info section -->
+    <section class="info">
+        <div class="container">
+            <div class="info__card">
+                <div class="info__img">
+                    <img src="content/info-img1.jpg" alt="img1">
+                </div>
+                <div class="container">
+                    <h3 class="grey">THE FIRST THING</h3>
+                    <p class="light-grey">Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
+                </div>
+            </div>
+            <div class="container">
+                <div class="info__card">
+                        <div class="container">
+                        <h3 class="grey">THE SECOND THING</h3>
+                        <p class="light-grey">Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
+                    </div>
+                    <div class="info__img">
+                        <img src="content/info-img2.jpg" alt="img2">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="info__card">
+                    <div class="info__img">
+                        <img src="content/info-img2.jpg" alt="img3">
+                    </div>
+                    <div class="container">
+                        <h3 class="grey">THE THIRD THING</h3>
+                        <p class="light-grey">Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
