--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
             <div class="info__card">
                 <div class="info__img">
-                    <img src="content/info-img2.jpg" alt="img3">
+                    <img src="content/pic03.jpg" alt="img3">
                 </div>
                 <div class="container">
                     <h3 class="grey">THE THIRD THING</h3>
