added join us section

--- a/index.html
+++ b/index.html
@@ -57,5 +57,15 @@
             </div>
         </div>
     </section>
+    <!-- Join us section -->
+    <scetion class="join-us">
+        <div class="container">
+            <h2 class="grey">
+                GET SHADY WITH SCIENCE
+            </h2>
+            <p class="light-grey">Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus.</p>
+            <button class="btn grey-btn">JOIN OUR CREW</button>
+        </div>
+    </scetion>
 </body>
 </html>
