naming convention for grey btn

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 GET SHADY WITH SCIENCE
             </h2>
             <p class="light-grey">Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus.</p>
-            <button class="btn grey-btn">JOIN OUR CREW</button>
+            <button class="btn btn__grey">JOIN OUR CREW</button>
         </div>
     </scetion>
 </body>
