--- a/index.html
+++ b/index.html
@@ -67,5 +67,18 @@
             <button class="btn btn__grey">JOIN OUR CREW</button>
         </div>
     </scetion>
+    <!-- footer -->
+    <footer class="footer">
+        <div class="container">
+            <h2 class="white">QUESTIONS OR COMMENTS?</h2>
+            <p class="white">Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus.</p>
+            <div class="split-input">
+                <input class="input" type="text" palceholder="Name">
+                <input class="input" type="text" placeholder="Email">
+            </div>
+            <textarea class="input" cols="30" rows="10" placeholder="Message"></textarea>
+            <button class="btn btn__white">SEND MESSAGE</button>
+        </div>
+    </footer>
 </body>
 </html>
